--- a/.github/workflows/Task.yml
+++ b/.github/workflows/Task.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
     - name: Set up Python #安装python
-      uses: actions/setup-python
+      uses: actions/setup-python@v1
       with:
         python-version: 3.8
     - name: Install requests #安装requests
